--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 
                 <p class="hero-sub fade-in">
                     Лабораторія коду. Професійна розробка та академічний консалтинг. 
-                    Твій результат — наш код.
+                    Твій результат - наш код.
                 </p>
                 
                 <div class="hero-btns fade-in-delay">
@@ -457,6 +457,7 @@
 </body>
 
 </html>
+
 
 
 
